account for no subcategory, add atom definition

--- a/templates/podcast_sc.xml.j2
+++ b/templates/podcast_sc.xml.j2
@@ -20,7 +20,5 @@
 			<itunes:email>{{ itunes.owner.email }}</itunes:email>
 		</itunes:owner>
 		<itunes:image href="{{ itunes.image.url }}"/>
-		<itunes:category text="{{ itunes.category.category }}">
-			<itunes:category text="{{ itunes.category.text }}"/>
-		</itunes:category>
+                <itunes:category text="{{ itunes.category.category }}"> </itunes:category>
 		<itunes:explicit>{{ itunes.explicit }}</itunes:explicit>
