--- a/templates/podcast_sc.xml.j2
+++ b/templates/podcast_sc.xml.j2
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss version="2.0" xmlns:itunes="http://www.itunes.com/dtds/podcast-1.0.dtd" xmlns:googleplay="http://www.google.com/schemas/play-podcasts/1.0" xmlns:atom="http://www.w3.org/2005/Atom">
+<rss version="2.0" xmlns:itunes="http://www.itunes.com/dtds/podcast-1.0.dtd" xmlns:atom="http://www.w3.org/2005/Atom">
 	<channel>
 		<title>{{ podcast.title }}</title>
 		<link>{{ podcast.link }}</link>
@@ -19,6 +19,6 @@
 			<itunes:name>{{ itunes.owner.name }}</itunes:name>
 			<itunes:email>{{ itunes.owner.email }}</itunes:email>
 		</itunes:owner>
-		<itunes:image href="{{ itunes.image.url }}"/>
+		<itunes:image href="{{ itunes.image.url }}" />
                 <itunes:category text="{{ itunes.category.category }}"> </itunes:category>
 		<itunes:explicit>{{ itunes.explicit }}</itunes:explicit>
