--- a/templates/podcast_sc.xml.j2
+++ b/templates/podcast_sc.xml.j2
@@ -19,6 +19,6 @@
 			<itunes:name>{{ itunes.owner.name }}</itunes:name>
 			<itunes:email>{{ itunes.owner.email }}</itunes:email>
 		</itunes:owner>
-		<itunes:image href="{{ itunes.image.url }}"></itunes:image>
-                <itunes:category text="{{ itunes.category.category }}"></itunes:category>
+		<itunes:image href="{{ itunes.image.url }}"/>
+                <itunes:category text="{{ itunes.category.category }}"> </itunes:category>
 		<itunes:explicit>{{ itunes.explicit }}</itunes:explicit>
