--- a/templates/podcast_sc.xml.j2
+++ b/templates/podcast_sc.xml.j2
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <rss version="2.0" xmlns:itunes="http://www.itunes.com/dtds/podcast-1.0.dtd" xmlns:atom="http://www.w3.org/2005/Atom">
 	<channel>
+                <atom:link href="{{ podcast.atom }}" rel="self" type="application/rss+xml"/>
 		<title>{{ podcast.title }}</title>
 		<link>{{ podcast.link }}</link>
                 <generator>{{ podcast.generator }}</generator>
