attempting to fix copyright

--- a/templates/podcast_sc.xml.j2
+++ b/templates/podcast_sc.xml.j2
@@ -6,7 +6,7 @@
 		<link>{{ podcast.link }}</link>
                 <generator>{{ podcast.generator }}</generator>
 		<language>{{ podcast.lang }}</language>
-		<copyright>{{ podcast.copyright|urlencode() }}</copyright>
+		<copyright>{{ podcast.copyright }}</copyright>
 		<image>
                 <url>{{ podcast.image.url }}</url>
 		<title>{{ podcast.image.title }}</title>
